argo/zigbee2mqtt/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zigbee2mqtt

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zigbee2mqtt
  namespace: zigbee2mqtt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zigbee2mqtt
  template:
    metadata:
      labels:
        app: zigbee2mqtt
    spec:
      containers:
        - name: zigbee2mqtt
          image: koenkk/zigbee2mqtt:latest
          imagePullPolicy: Always

          ports:
            - name: http
              containerPort: 8080

          volumeMounts:
            - name: data
              mountPath: /app/data

#          readinessProbe:
#            httpGet:
#              path: /
#              port: 8080
#            periodSeconds: 10

#          livenessProbe:
#            httpGet:
#              path: /
#              port: 8080
#            periodSeconds: 20

      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: zigbee2mqtt-data

---
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
  namespace: zigbee2mqtt
spec:
  selector:
    app: zigbee2mqtt
  ports:
    - name: http
      port: 8080
      targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zigbee2mqtt
  namespace: zigbee2mqtt
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01
    traefik.ingress.kubernetes.io/router.middlewares: default-internal-whitelist@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - zigbee2mqtt.mangelschots.org
      secretName: zigbee2mqtt-mangelschots-org-tls
  rules:
    - host: zigbee2mqtt.mangelschots.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zigbee2mqtt
                port:
                  number: 8080
